--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,20 +10,20 @@
 
     <application
         android:allowBackup="false"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/placeholder"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity" />
         <activity android:name=".Home">
+
+        </activity>
+        <activity android:name=".songs" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity android:name=".songs" >
-
         </activity>
         <activity android:name=".searchActivity" />
         <activity android:name=".playingsongActivity" />
@@ -32,10 +32,6 @@
 
         <activity android:name=".notesActivity" />
         <activity android:name=".playlistActivity" />
-        <activity android:name=".registrationActivity">
-
-        </activity>
-        <activity android:name=".loginActivity" />
 
         <receiver
             android:enabled="true"
